feat: shell toggle to s-f12 like the jetbrains like shortcut

--- a/hammers/emacs/terminal.org
+++ b/hammers/emacs/terminal.org
@@ -128,7 +128,7 @@ file to edit."
 #+BEGIN_SRC elisp :eval never :exports code
   (use-package eshell-toggle
     :bind
-    (("M-<f12>" . eshell-toggle)))
+    (("s-<f12>" . eshell-toggle)))
 #+END_SRC
 
 
