--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -22,29 +22,30 @@
 ** 版本配置
    配置文件使用了一些特性，这些特性在太久的版本上会出现不兼容。对比版本给出相应的提示信息。
 
-  #+BEGIN_SRC elisp
+#+BEGIN_SRC elisp
   (let ((minver "24.4"))
     (when (version< emacs-version minver)
       (error "Your Emacs is too old -- this config requires v%s or higher" minver)))
   (when (version< emacs-version "25.1")
     (message "Your Emacs is old, and some functionality in this config will be disabled. Please upgrade if possible."))
-  #+END_SRC
+#+END_SRC
 
 ** 系统配置
 
-#+BEGIN_SRC elisp
-(defconst m/os
-  (let ((os (symbol-name system-type)))
-    (cond ((string= os "darwin") 'macos)
-          ((string-prefix-p "gnu" os) 'linux)
-          ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
-(defvar m/conf.d (expand-file-name user-emacs-directory))
+#+BEGIN_SRC elisp :var conf.d=(or m/conf.d (expand-file-name user-emacs-directory)) :eval never :exports code
+  (defconst m/os
+    (let ((os (symbol-name system-type)))
+      (cond ((string= os "darwin") 'macos)
+	    ((string-prefix-p "gnu" os) 'linux)
+	    ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
+
+  (defvar m/conf.d conf.d)
 #+END_SRC
 
 ** 是否开启离线模式
 #+BEGIN_SRC elisp
 (defvar m/offline 
-  (file-directory-p (expand-file-name "offline" user-emacs-directory)))
+  (file-directory-p (expand-file-name "offline" m/conf.d)))
 #+END_SRC
 
 ** 垃圾回收设置
@@ -62,13 +63,13 @@
     ;;; Install into separate package dirs for each Emacs version, to prevent bytecode incompatibility
   (let ((versioned-package-dir
 	 (expand-file-name (format "elpa-%s.%s" emacs-major-version emacs-minor-version)
-			   user-emacs-directory)))
+			   m/conf.d)))
     (setq package-user-dir versioned-package-dir))
 
   (if m/offline
-      (setq package-archives `(("gnu" . ,(expand-file-name "offline/gnu" user-emacs-directory))
-			       ("melpa" . ,(expand-file-name "offline/melpa" user-emacs-directory))
-			       ("org" . ,(expand-file-name "offline/org" user-emacs-directory))))
+      (setq package-archives `(("gnu" . ,(expand-file-name "offline/gnu" m/conf.d))
+			       ("melpa" . ,(expand-file-name "offline/melpa" m/conf.d))
+			       ("org" . ,(expand-file-name "offline/org" m/conf.d))))
     (let* ((no-ssl (and (memq system-type '(windows-nt ms-dos))
 			(not (gnutls-available-p))))
 	   (proto (if no-ssl "http" "https")))
@@ -117,8 +118,8 @@
 *** 包加载路径配置
     所有的自定义的配置文件都在 emacs 配置文件夹下的 lisp 目录下。所以我们需要将 lisp 目录添加到加载路径中
     #+BEGIN_SRC elisp
-    (add-to-list 'load-path (expand-file-name "lisp" user-emacs-directory))
-    (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
+    (add-to-list 'load-path (expand-file-name "lisp" m/conf.d))
+    (setq custom-file (expand-file-name "custom.el" m/conf.d))
     #+END_SRC
 
 *** 保证永远使用最新的 lisp 配置文件，或者库文件
@@ -136,8 +137,8 @@
 
    #+BEGIN_SRC elisp
      (defconst m/load-path (lambda () (list 
-				  (expand-file-name "lisp" user-emacs-directory)
-				  (expand-file-name "verilog-mode" (expand-file-name "3rdparty" user-emacs-directory)))))
+				  (expand-file-name "lisp" m/conf.d)
+				  (expand-file-name "verilog-mode" (expand-file-name "3rdparty" m/conf.d)))))
      (use-package init-os
        :load-path m/load-path)
      (use-package init-ui
