--- a/hammers/emacs/lsp.org
+++ b/hammers/emacs/lsp.org
@@ -368,7 +368,7 @@ ln -s $(which lldb-vscode) ~/.vscode/extensions/llvm-org.lldb-vscode-0.1.0/bin/l
 
 #+BEGIN_SRC elisp :eval never :exports code
 (use-package lsp-ivy
-  :load-path (lambda () (expand-file-name "lisp" user-emacs-directory))
+  :load-path (lambda () (expand-file-name "lisp" m/conf.d))
   :requires lsp-mode
   :config
   (defun m/lsp-ivy-workspace-symbol-at-point ()
