--- a/hammers/emacs/lsp.org
+++ b/hammers/emacs/lsp.org
@@ -339,9 +339,9 @@
 }
 #+END_SRC
 
-#+BEGIN_SRC shell :exports code
+#+BEGIN_SRC shell :exports code :tangle no
 mkdir -p ~/.vscode/extensions/llvm-org.lldb-vscode-0.1.0/bin/
-ln -s $(which lldb-vscode) ~/.vscode/extensions/llvm-org.lldb-vscode-0.1.0/bin/lldb-vscode
+which lldb-vscode && ln -s $(which lldb-vscode) ~/.vscode/extensions/llvm-org.lldb-vscode-0.1.0/bin/lldb-vscode
 #+END_SRC
 
 #+BEGIN_SRC elisp :eval never :exports code
