--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -31,6 +31,7 @@
   export PATH="/opt/xtensa-esp32-elf/bin:/usr/local/opt/mysql-client/bin:$PATH"
   # Add RVM to PATH for scripting. Make sure this is the last PATH variable change.
   export PATH="$PATH:$HOME/.rvm/bin"
+  export PATH="$HOME/.local/bin:$PATH"
   export JAVA_HOME="/Library/Java/JavaVirtualMachines/openjdk-13.0.1.jdk/Contents/Home"
   <<zshenv>>
 #+END_SRC
