--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -141,7 +141,9 @@
    #+BEGIN_SRC elisp
      (defconst m/load-path (lambda () (list 
 				  (expand-file-name "lisp" m/conf.d)
-				  (expand-file-name "verilog-mode" (expand-file-name "3rdparty" m/conf.d)))))
+				  (expand-file-name "verilog-mode" (expand-file-name "3rdparty" m/conf.d))
+				  (expand-file-name "lsp-ivy" (expand-file-name "3rdparty" m/conf.d))
+				  (expand-file-name "librime" (expand-file-name "3rdparty" m/conf.d)))))
      (use-package init-os
        :load-path m/load-path)
      (use-package init-ui
