--- a/hammers/emacs/ui.org
+++ b/hammers/emacs/ui.org
@@ -12,7 +12,7 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 *** 界面配置
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (setq use-file-dialog nil)
 (setq use-dialog-box nil)
 (setq inhibit-startup-screen t)
@@ -59,11 +59,11 @@
 #+END_SRC
 
 *** yes-no -> y-n
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (defalias 'yes-or-no-p 'y-or-n-p)
 #+END_SRC
 *** macos 不显示 title bar
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package ns-auto-titlebar
   :if (eq m/os 'macos)
   :config
@@ -71,7 +71,7 @@
 #+END_SRC
 
 *** 安装主题
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package color-theme-sanityinc-tomorrow
   :config
   (setq custom-safe-themes t)
@@ -79,7 +79,7 @@
 #+END_SRC
 
 *** 安装图标库
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (use-package all-the-icons
     :config
     (unless (or (member "all-the-icons" (font-family-list)) m/offline)
@@ -90,7 +90,7 @@
 #+END_SRC
 
 *** 快速切换窗口
- #+BEGIN_SRC elisp
+ #+BEGIN_SRC elisp :eval never :exports code
  (use-package ace-window
    :ensure t
    :config
@@ -99,21 +99,21 @@
  #+END_SRC
 
 *** 分页
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package page-break-lines
   :diminish page-break-lines-mode
   :config
   (global-page-break-lines-mode))
 #+END_SRC
 *** 自动提示可选命令
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package which-key
   :config
   (which-key-mode t))
 
 #+END_SRC
 *** counsel
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package counsel
   :diminish ivy-mode counsel-mode  
   :custom
@@ -186,7 +186,7 @@
  #+END_SRC
 
 *** ivy-xref
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package ivy-xref
   :after (ivy)
   :init (if (< emacs-major-version 27)
@@ -197,7 +197,7 @@
 
  #+END_SRC 
 *** dashboard
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package dashboard
    :diminish dashboard-mode
    :config
@@ -213,6 +213,6 @@
   (after-init . dashboard-setup-startup-hook))
 #+END_SRC
 *** provide
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (provide 'init-ui)
 #+END_SRC
