--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -13,7 +13,7 @@
 
 ** 错误提醒相关
    当发生错误的时候，打印错错误的堆栈信息。
-   #+BEGIN_SRC elisp
+   #+BEGIN_SRC elisp :eval never :exports code
    ;;(setq url-proxy-services '(("https" . "127.0.0.1:1089")
    ;;                        ("http" . "127.0.0.1:1089")))
    (setq debug-on-error t)
@@ -22,7 +22,7 @@
 ** 版本配置
    配置文件使用了一些特性，这些特性在太久的版本上会出现不兼容。对比版本给出相应的提示信息。
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (let ((minver "24.4"))
     (when (version< emacs-version minver)
       (error "Your Emacs is too old -- this config requires v%s or higher" minver)))
@@ -46,13 +46,13 @@
 #+END_SRC
 
 ** 是否开启离线模式
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (defvar m/offline 
   (file-directory-p (expand-file-name "offline" m/conf.d)))
 #+END_SRC
 
 ** 垃圾回收设置
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (setq gc-cons-threshold 100000000)
 #+END_SRC
 ** 包管理配置
@@ -61,7 +61,7 @@
 *** 包管理器配置
     Emacs 的包管理器名为：[[http://tromey.com/elpa/][package]]. 但是 package 默认配置插件仓库包含的插件相对较少，我们需要添加一些常用的第三方插件仓库，以便与搜索与安装插件。
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (require 'package)
     ;;; Install into separate package dirs for each Emacs version, to prevent bytecode incompatibility
   (let ((versioned-package-dir
@@ -120,13 +120,13 @@
 
 *** 包加载路径配置
     所有的自定义的配置文件都在 emacs 配置文件夹下的 lisp 目录下。所以我们需要将 lisp 目录添加到加载路径中
-    #+BEGIN_SRC elisp
+    #+BEGIN_SRC elisp :eval never :exports code
     (add-to-list 'load-path (expand-file-name "lisp" m/conf.d))
     (setq custom-file (expand-file-name "custom.el" m/conf.d))
     #+END_SRC
 
 *** 保证永远使用最新的 lisp 配置文件，或者库文件
-  #+BEGIN_SRC elisp
+  #+BEGIN_SRC elisp :eval never :exports code
   (use-package auto-compile
   :ensure t
   :custom (load-prefer-newer t)
@@ -138,7 +138,7 @@
  
 ** 自定义配置聚合
 
-   #+BEGIN_SRC elisp
+   #+BEGIN_SRC elisp :eval never :exports code
      (defconst m/load-path (lambda () (list 
 				  (expand-file-name "lisp" m/conf.d)
 				  (expand-file-name "verilog-mode" (expand-file-name "3rdparty" m/conf.d))
@@ -173,6 +173,6 @@
    #+END_SRC
 
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (provide 'init)
 #+END_SRC
