--- a/hammers/emacs/completion.org
+++ b/hammers/emacs/completion.org
@@ -12,7 +12,7 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 ** company
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (use-package company
     :diminish company-mode
     :bind
@@ -61,7 +61,7 @@
 ** yasnippet
 如果我们需要将在 company 补全的时候，同时使用 yasnippet, 这种时候需要将 yasnippet 的 backend 添加到 company-backends 变量中
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (use-package yasnippet
     :config
     (use-package yasnippet-snippets
@@ -85,6 +85,6 @@
 #+END_SRC
 
 ** provide
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (provide 'init-completion)
 #+END_SRC
