--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -13,7 +13,7 @@
 
 ** 基础设置
 *** 基础设置
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (put 'narrow-to-region 'disabled nil)
 (put 'narrow-to-page 'disabled nil)
 (put 'narrow-to-defun 'disabled nil)
@@ -22,7 +22,7 @@
 (cua-selection-mode t)
 #+END_SRC
 不生成 #filename# 临时文件
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (auto-save-visited-mode)
   (make-directory (expand-file-name "backups" m/conf.d) t)
   (setq auto-save-file-name-transforms
@@ -31,30 +31,30 @@
 	(expand-file-name "backups/" m/conf.d))
 #+END_SRC
 禁止备份文件
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (setq make-backup-files nil)
   ; stop to create the lock files
   ; lock files is used to prevent concurrent edit of a file
   (setq create-lockfiles nil)
 #+END_SRC
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (setq delete-by-moving-to-trash t) 
 #+END_SRC
 保持光标在行尾
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (setq track-eol t)
 (setq line-move-visual nil)
 #+END_SRC
 默认整行删除，包括 \n
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (setq-default kill-whole-line t)
 #+END_SRC
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (setq set-mark-command-repeat-pop t)
 #+END_SRC
 *** 光标位置
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package beacon
   :diminish beacon-mode
   :config
@@ -84,7 +84,7 @@
 #+END_SRC
 *** 智能移动行首
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package mwim
   :bind
   ("C-a" . mwim-beginning-of-code-or-line)
@@ -92,7 +92,7 @@
 #+END_SRC
 
 *** 短时间敲击序列映射
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package key-chord
   :config
   (setq key-chord-two-keys-delay 0.2)
@@ -105,7 +105,7 @@
 
 *** 折叠
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package origami
 :bind (("C-c f" . origami-recursively-toggle-node)
        ("C-c F" . origami-toggle-all-nodes))
@@ -115,7 +115,7 @@
 
 *** 回滚记录
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package undo-tree
   :ensure t
   :config
@@ -127,7 +127,7 @@
 
 *** file-paragraph & file-region & unfill-region & unfile-paragraph
 [fill & unfill][https://www.emacswiki.org/emacs/FillParagraph]
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 
 (use-package unfill
   :config
@@ -137,14 +137,14 @@
 
 *** 上次修改的地方
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package goto-last-change
   :bind ("C-x /" . goto-last-change))
 #+END_SRC
 
 ** 剪切设置
 *** 浏览剪切历史
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package browse-kill-ring
   :custom
   (browse-kill-ring-separator "\f")
@@ -163,7 +163,7 @@
 #+END_SRC
 ** 括号设置
 *** 括号配对显示
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package paren	
   :custom
   (show-paren-style 'mixed)
@@ -173,19 +173,19 @@
   (show-paren-mode 1))
 #+END_SRC
 *** 括号自动匹配
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package elec-pair
   :config
   (electric-pair-mode 1))
 #+END_SRC
 *** 括号中内容显示
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package rainbow-delimiters
   :hook
   ((prog-mode . rainbow-delimiters-mode)))
 #+END_SRC
 *** 智能括号替换
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
   (use-package smartparens
     :bind
     (([remap backward-up-list] . sp-backward-up-sexp)
@@ -227,7 +227,7 @@
 
 ** 搜索设置
 *** 在另外的 buffer 动态显示结果
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
  (use-package swiper
   :demand t
   :bind 
@@ -261,7 +261,7 @@
           (woman . ""))))
 #+END_SRC
 *** 替换
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package anzu
   :config
   (setq anzu-mode-lighter "")
@@ -271,7 +271,7 @@
    ([remap query-replace] . anzu-query-replace)))
 #+END_SRC
 *** 编辑搜索结果
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package wgrep
    :custom
    (wgrep-enable-key "e")
@@ -280,7 +280,7 @@
 #+END_SRC
 
 ** 清除到指定地方
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package avy-zap
   :bind
   ("M-z" . avy-zap-to-char-dwim)
@@ -288,7 +288,7 @@
 #+END_SRC
 ** 扩充选定区域
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package expand-region
   :after org
   :bind
@@ -297,7 +297,7 @@
 
 ** 动态多光标
 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 
 (use-package multiple-cursors
   :bind (
@@ -316,7 +316,7 @@
 #+END_SRC
 
 ** 移动或者复制行
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package move-dup
   :bind (("M-<up>" . md-move-lines-up)
   ("M-<down>" . md-move-lines-down)
@@ -327,7 +327,7 @@
 #+END_SRC
 
 ** 复制或剪切当前行
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package whole-line-or-region
   :diminish whole-line-or-region-local-mode
   :config
@@ -335,14 +335,14 @@
 #+END_SRC
 
 ** 高亮转义字符
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package highlight-escape-sequences
   :config
   (hes-mode t))
 #+END_SRC
 
 ** 智能扩展 hippie-expand
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (global-set-key (kbd "M-/") 'hippie-expand)
 
 (setq hippie-expand-try-functions-list
@@ -354,7 +354,7 @@
 #+END_SRC
 
 ** 高亮显示标示符
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package symbol-overlay
   :diminish symbol-overlay-mode
   :hook
@@ -370,13 +370,13 @@
     ("M-p" . symbol-overlay-jump-prev)))
 #+END_SRC
 ** mode line 警告
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package mode-line-bell
   :init
   (add-hook 'after-init-hook 'mode-line-bell-mode))
 #+END_SRC
 ** 回车
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (global-set-key (kbd "RET") 'newline-and-indent)
 (defun m/newline-at-end-of-line ()
   "Move to end of line, enter a newline, and reindent."
@@ -387,13 +387,13 @@
 (global-set-key (kbd "S-<return>") 'm/newline-at-end-of-line)
 #+END_SRC
 ** 驼峰或者下划线分字
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package subword
 :config
 (global-subword-mode))
 #+END_SRC
 ** 位置之间向前切换或者向后切换
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package backward-forward
   :bind
   ("C-," . backward-forward-previous-location)
@@ -405,7 +405,7 @@
   (backward-forward-mode t))
 #+END_SRC
 ** 显示行号
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package display-line-numbers
   :custom
   (display-line-numbers-width 3)
@@ -413,7 +413,7 @@
   ((prog-mode yaml-mode systemd-mode) . display-line-numbers-mode))
 #+END_SRC
 ** 其他
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package goto-line-preview
   :after display-line-numbers
   :bind
@@ -428,6 +428,6 @@
   (add-hook 'after-init-hook 'global-prettify-symbols-mode))
 #+END_SRC
 *** provide
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (provide 'init-editing)
 #+END_SRC
