--- a/hammers/emacs/project.org
+++ b/hammers/emacs/project.org
@@ -12,7 +12,7 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 *** projectile 
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package projectile
   :diminish projectile-mode
   :after counsel
@@ -40,12 +40,12 @@
 #+END_SRC
 
 *** ibuffer
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (use-package ibuffer
   :bind ("C-x C-b" . ibuffer))
 #+END_SRC
 
 *** export
-#+BEGIN_SRC elisp
+#+BEGIN_SRC elisp :eval never :exports code
 (provide 'init-project)
 #+END_SRC
