--- a/hammers/rg/ripgreprc.org
+++ b/hammers/rg/ripgreprc.org
@@ -9,7 +9,7 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
-#+BEGIN_SRC shell :tangle ~/.ripgreprc
+#+BEGIN_SRC shell :tangle ~/.ripgreprc :eval never :exports code
 --type-add
 meson:*.build
 --type-add
