--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -13,48 +13,48 @@
 
 ** 基础设置
 *** 基础设置
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (put 'narrow-to-region 'disabled nil)
 (put 'narrow-to-page 'disabled nil)
 (put 'narrow-to-defun 'disabled nil)
 (put 'upcase-region 'disabled nil)
 (put 'downcase-region 'disabled nil)
 (cua-selection-mode t)
-#+END_SRC
-不生成 #filename# 临时文件
-#+BEGIN_SRC elisp :eval never :exports code
+    #+END_SRC
+    不生成 #filename# 临时文件
+    #+BEGIN_SRC elisp :eval never :exports code
   (auto-save-visited-mode)
   (make-directory (expand-file-name "backups" m/conf.d) t)
   (setq auto-save-file-name-transforms
 	`((".*" ,(expand-file-name "backups/" m/conf.d) t)))
   (setq auto-save-list-file-prefix
 	(expand-file-name "backups/" m/conf.d))
-#+END_SRC
-禁止备份文件
-#+BEGIN_SRC elisp :eval never :exports code
+    #+END_SRC
+    禁止备份文件
+    #+BEGIN_SRC elisp :eval never :exports code
   (setq make-backup-files nil)
   ; stop to create the lock files
   ; lock files is used to prevent concurrent edit of a file
   (setq create-lockfiles nil)
-#+END_SRC
-#+BEGIN_SRC elisp :eval never :exports code
+    #+END_SRC
+    #+BEGIN_SRC elisp :eval never :exports code
 (setq delete-by-moving-to-trash t) 
-#+END_SRC
-保持光标在行尾
-#+BEGIN_SRC elisp :eval never :exports code
+    #+END_SRC
+    保持光标在行尾
+    #+BEGIN_SRC elisp :eval never :exports code
 (setq track-eol t)
 (setq line-move-visual nil)
-#+END_SRC
-默认整行删除，包括 \n
-#+BEGIN_SRC elisp :eval never :exports code
+    #+END_SRC
+    默认整行删除，包括 \n
+    #+BEGIN_SRC elisp :eval never :exports code
 (setq-default kill-whole-line t)
-#+END_SRC
+    #+END_SRC
 
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (setq set-mark-command-repeat-pop t)
-#+END_SRC
+    #+END_SRC
 *** 光标位置
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package beacon
   :diminish beacon-mode
   :config
@@ -81,18 +81,18 @@
   :ensure nil
   :hook
   (after-init . global-hl-line-mode))
-#+END_SRC
+    #+END_SRC
 *** 智能移动行首
 
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package mwim
   :bind
   ("C-a" . mwim-beginning-of-code-or-line)
   ("C-e" . mwim-end-of-code-or-line))
-#+END_SRC
+    #+END_SRC
 
 *** 短时间敲击序列映射
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package key-chord
   :config
   (setq key-chord-two-keys-delay 0.2)
@@ -101,21 +101,21 @@
   (key-chord-define-global "''" "`'\C-b")
   (key-chord-define-global ",," 'indent-for-comment-and-indent)
   (key-chord-mode 1))
-#+END_SRC
+    #+END_SRC
 
 *** 折叠
 
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package origami
 :bind (("C-c f" . origami-recursively-toggle-node)
        ("C-c F" . origami-toggle-all-nodes))
 :config
 (global-origami-mode t))
-#+END_SRC
+    #+END_SRC
 
 *** 回滚记录
 
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package undo-tree
   :ensure t
   :config
@@ -123,28 +123,28 @@
   (setq undo-tree-history-directory-alist
         `((".*" . ,temporary-file-directory)))
   (setq undo-tree-auto-save-history t))
-#+END_SRC
+    #+END_SRC
 
 *** file-paragraph & file-region & unfill-region & unfile-paragraph
-[fill & unfill][https://www.emacswiki.org/emacs/FillParagraph]
-#+BEGIN_SRC elisp :eval never :exports code
+    [fill & unfill][https://www.emacswiki.org/emacs/FillParagraph]
+    #+BEGIN_SRC elisp :eval never :exports code
 
 (use-package unfill
   :config
   (global-set-key (kbd "M-q") 'unfill-toggle))
 
-#+END_SRC
+    #+END_SRC
 
 *** 上次修改的地方
 
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package goto-last-change
   :bind ("C-x /" . goto-last-change))
-#+END_SRC
+    #+END_SRC
 
 ** 剪切设置
 *** 浏览剪切历史
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package browse-kill-ring
   :custom
   (browse-kill-ring-separator "\f")
@@ -155,15 +155,15 @@
    ("M-n" . browse-kill-ring-forward)
    ("M-p" . browse-kill-ring-previous)
   ))
-#+END_SRC
+    #+END_SRC
 
 ** 远程文件访问（Tramp: Transparent Remote Access Multiple Protocol）
-#+BEGIN_SRC elisp :exports code :eval never
+   #+BEGIN_SRC elisp :exports code :eval never
   (setq tramp-terminal-type "tramp")
-#+END_SRC
+   #+END_SRC
 ** 括号设置
 *** 括号配对显示
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package paren	
   :custom
   (show-paren-style 'mixed)
@@ -171,21 +171,21 @@
   (show-paren-when-point-inside-periphery t)
   :config
   (show-paren-mode 1))
-#+END_SRC
+    #+END_SRC
 *** 括号自动匹配
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package elec-pair
   :config
   (electric-pair-mode 1))
-#+END_SRC
+    #+END_SRC
 *** 括号中内容显示
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package rainbow-delimiters
   :hook
   ((prog-mode . rainbow-delimiters-mode)))
-#+END_SRC
+    #+END_SRC
 *** 智能括号替换
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
   (use-package smartparens
     :bind
     (([remap backward-up-list] . sp-backward-up-sexp)
@@ -223,11 +223,11 @@
     (sp-pair "<" ">" :actions '(wrap))
     (sp-pair "$" "$" :actions '(wrap)))
 
-#+END_SRC
+    #+END_SRC
 
 ** 搜索设置
 *** 在另外的 buffer 动态显示结果
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
  (use-package swiper
   :demand t
   :bind 
@@ -259,9 +259,9 @@
           (counsel-org-capture . "")
           (Man-completion-table . "")
           (woman . ""))))
-#+END_SRC
+    #+END_SRC
 *** 替换
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (use-package anzu
   :config
   (setq anzu-mode-lighter "")
@@ -269,35 +269,77 @@
   :bind
   (([remap query-replace-regexp] . anzu-query-replace-regexp)
    ([remap query-replace] . anzu-query-replace)))
-#+END_SRC
+    #+END_SRC
+*** 使用 rg 去处理 ripgrep 结果
+    #+BEGIN_SRC elisp :eval never :exports code
+    (use-package rg
+      :preface
+      (defun rg-occur-hide-lines-not-matching (search-text)
+	"Hide lines that don't match the specified regexp."
+	(interactive "MHide lines not matched by regexp: ")
+	(set (make-local-variable 'line-move-ignore-invisible) t)
+	(save-excursion
+	  (goto-char (point-min))
+	  (forward-line 5)
+	  (let ((inhibit-read-only t)
+		line)
+	    (while (not (looking-at-p "^\nrg finished "))
+	      (setq line (buffer-substring-no-properties (point) (point-at-eol)))
+	      (if (string-match-p search-text line)
+		  (forward-line)
+		(when (not (looking-at-p "^\nrg finished "))
+		  (delete-region (point) (1+ (point-at-eol)))))))))
+      (defun rg-occur-hide-lines-matching  (search-text)
+	"Hide lines matching the specified regexp."
+	(interactive "MHide lines matching regexp: ")
+	(set (make-local-variable 'line-move-ignore-invisible) t)
+	(save-excursion
+	  (goto-char (point-min))
+	  (forward-line 5)
+	  (let ((inhibit-read-only t)
+		line)
+	    (while (not (looking-at-p "^\nrg finished "))
+	      (setq line (buffer-substring-no-properties (point) (point-at-eol)))
+	      (if (not (string-match-p search-text line))
+		  (forward-line)
+		(when (not (looking-at-p "^\nrg finished "))
+		  (delete-region (point) (1+ (point-at-eol)))))))))
+      :custom
+      (rg-show-header nil)
+      :config
+      (rg-enable-default-bindings)
+      :bind
+      (:map rg-mode-map ("/" . rg-occur-hide-lines-not-matching)
+	    ("!" . rg-occur-hide-lines-matching)))
+    #+END_SRC
 *** 编辑搜索结果
-#+BEGIN_SRC elisp :eval never :exports code
-(use-package wgrep
-   :custom
-   (wgrep-enable-key "e")
-   (wgrep-auto-save-buffer t)
-   (wgrep-change-readonly-file t))
-#+END_SRC
+    #+BEGIN_SRC elisp :eval never :exports code
+      (use-package wgrep
+	:custom
+	(wgrep-enable-key "e")
+	(wgrep-auto-save-buffer nil)
+	(wgrep-change-readonly-file t))
+    #+END_SRC
 
 ** 清除到指定地方
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package avy-zap
   :bind
   ("M-z" . avy-zap-to-char-dwim)
   ("M-z" . avy-zap-up-to-char-dwim))
-#+END_SRC
+   #+END_SRC
 ** 扩充选定区域
 
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package expand-region
   :after org
   :bind
   (("C-=" . er/expand-region)))
-#+END_SRC
+   #+END_SRC
 
 ** 动态多光标
 
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 
 (use-package multiple-cursors
   :bind (
@@ -313,10 +355,10 @@
 
 (global-unset-key [M-left])
 (global-unset-key [M-right])
-#+END_SRC
+   #+END_SRC
 
 ** 移动或者复制行
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package move-dup
   :bind (("M-<up>" . md-move-lines-up)
   ("M-<down>" . md-move-lines-down)
@@ -324,25 +366,25 @@
   ("M-S-<down>" . md-duplicate-down)
   ("C-c d" . md-duplicate-down)
   ("C-c u" . md-duplicate-up)))
-#+END_SRC
+   #+END_SRC
 
 ** 复制或剪切当前行
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package whole-line-or-region
   :diminish whole-line-or-region-local-mode
   :config
   (whole-line-or-region-global-mode t))
-#+END_SRC
+   #+END_SRC
 
 ** 高亮转义字符
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package highlight-escape-sequences
   :config
   (hes-mode t))
-#+END_SRC
+   #+END_SRC
 
 ** 智能扩展 hippie-expand
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (global-set-key (kbd "M-/") 'hippie-expand)
 
 (setq hippie-expand-try-functions-list
@@ -351,10 +393,10 @@
         try-expand-dabbrev
         try-expand-dabbrev-all-buffers
         try-expand-dabbrev-from-kill))
-#+END_SRC
+   #+END_SRC
 
 ** 高亮显示标示符
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package symbol-overlay
   :diminish symbol-overlay-mode
   :hook
@@ -368,15 +410,15 @@
     ("M-I" . symbol-overlay-remove-all)
     ("M-n" . symbol-overlay-jump-next)
     ("M-p" . symbol-overlay-jump-prev)))
-#+END_SRC
+   #+END_SRC
 ** mode line 警告
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package mode-line-bell
   :init
   (add-hook 'after-init-hook 'mode-line-bell-mode))
-#+END_SRC
+   #+END_SRC
 ** 回车
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (global-set-key (kbd "RET") 'newline-and-indent)
 (defun m/newline-at-end-of-line ()
   "Move to end of line, enter a newline, and reindent."
@@ -385,15 +427,15 @@
   (newline-and-indent))
 
 (global-set-key (kbd "S-<return>") 'm/newline-at-end-of-line)
-#+END_SRC
+   #+END_SRC
 ** 驼峰或者下划线分字
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package subword
 :config
 (global-subword-mode))
-#+END_SRC
+   #+END_SRC
 ** 位置之间向前切换或者向后切换
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package backward-forward
   :bind
   ("C-," . backward-forward-previous-location)
@@ -403,17 +445,17 @@
   (set-mark-command-repeat-pop t)
   :config
   (backward-forward-mode t))
-#+END_SRC
+   #+END_SRC
 ** 显示行号
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package display-line-numbers
   :custom
   (display-line-numbers-width 3)
   :hook
   ((prog-mode yaml-mode systemd-mode) . display-line-numbers-mode))
-#+END_SRC
+   #+END_SRC
 ** 其他
-#+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code
 (use-package goto-line-preview
   :after display-line-numbers
   :bind
@@ -426,8 +468,8 @@
 
 (when (fboundp 'global-prettify-symbols-mode)
   (add-hook 'after-init-hook 'global-prettify-symbols-mode))
-#+END_SRC
+   #+END_SRC
 *** provide
-#+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code
 (provide 'init-editing)
-#+END_SRC
+    #+END_SRC
