feat(gdb): enable pending breakpoint

--- a/hammers/gdb/gdbinit.org
+++ b/hammers/gdb/gdbinit.org
@@ -2294,4 +2294,6 @@ python Dashboard.start()
   set history remove-duplicates unlimited
   # 修复在 macos 下 gdb 不能正常启动的问题
   set startup-with-shell off
+
+  set breakpoint pending on
 #+END_SRC
