feat(lsp): disable lsp snippets

--- a/hammers/emacs/lsp.org
+++ b/hammers/emacs/lsp.org
@@ -20,6 +20,7 @@
   ;; debug
   (lsp-log-io t)
   (lsp-trace nil)
+  (lsp-enable-snippet nil)
   (lsp-print-performance nil)
   ;; general
   (lsp-auto-guess-root t)
